# esp_move_detect

./: .gitignore  README.md
ota-app/: .gitignore  Cargo.toml
ota-app/.cargo/: config.toml
ota-app/src/: main.rs
ota-downloader/: Cargo.toml
ota-downloader-wasm/: Cargo.toml  LICENSE_MIT
ota-downloader-wasm/src/: lib.rs
ota-downloader/src/: main.rs
ota-test/: Cargo.toml
ota-test/src/: main.rs
ota_first_try/ota-app/: Cargo.toml  sdkconfig.defaults
ota_first_try/ota-app/src/: main.rs
planing/: commands.txt
planning/: commands.txt
rust-bin/: .gitignore  Cargo.toml  README.md  partitions.csv  partitions_qemu.csv  qemu.sh  sdkconfig.defaults
rust-bin/.cargo/: config.toml
rust-bin/src/: main.rs  wifi_info_fill_out.rs
rust_bin/: export-esp.nu  qemu.sh  sdkconfig.defaults
rust_bin/src/: main.rs  wifi_info_fill_out.rs
simulate_esp_udp_client/: ip.html
simulate_esp_udp_client/src/: main.rs
simulate_loxone_udp_server/src/: main.rs
