[package]
name = "rust-bin"
version = "0.1.0"
authors = ["Roman Kray <romankray@freenet.de>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]
pio = ["esp-idf-sys/pio"]
qemu = []
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]
[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"
embedded-hal = "0.2.7"
embedded-svc = "0.24.0"
anyhow = "*"
log = "*"

[build-dependencies]
embuild = "0.31.0"

