[package]
name = "rust-bin"
version = "0.1.0"
authors = ["Roman Kray <romankray@freenet.de>"]
edition = "2021"
resolver = "2"

[profile.release]
#opt-level = "s"
#smaller bin
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
#strip = true  # Automatically strip symbols from the binary.

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[features]
default = ["experimental"]
pio = ["esp-idf-sys/pio"]
qemu = []
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
esp-idf-sys = { version = "0.31.12", features = ["binstart"] }
esp-idf-hal = "0.39.4"
esp-idf-svc = "0.43.5"
embedded-hal = "0.2.7"
embedded-svc = "0.23.1"
esp-ota = "*"
anyhow = "*"
log = "*"

[build-dependencies]
embuild = "0.31.0"


[package.metadata.espflash]
partition_table = "partitions.csv"

